# ObjectSerialization

./: .gitignore  CMakeLists.txt  Output_of_test.txt  README.md  all_in_one.sh
include/: Base64.h  Bin_Ser.h  Serialize.h  Serializer.h  Serializer_new.h  XML_Ser.h  XML_UserType.h  tinyxml2.h
src/: Base64.cpp  Bin_Ser.cpp  Bin_Ser_test.cpp  Serializer_new_test.cpp  Serializer_test.cpp  XML_Ser.cpp  XML_Ser_test.cpp  test.cpp  tinyxml2.cpp
